# waimea-wave

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
data/raw/: buoy-data.csv  wide.csv
presentation/: Waimea_Bay_Wave_Forecasting.pptx
tests/: test_smoke.py
waimea_waves/: __init__.py  config.py
waimea_waves/data/: loader.py  preprocessing.py
waimea_waves/features/: engineering.py
waimea_waves/inference/: predict.py
waimea_waves/models/: estimator.py  train.py
waimea_waves/utils/: logging.py
