[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waimea-waves"
version = "0.1.0"
description = "POC wave-height forecasting for Waimea Bay using buoy data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pydantic>=2.0",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["waimea_waves*"]

[tool.ruff]
line-length = 100
